# OOP

./: README.md
1/: CMakeLists.txt  Long.cpp  Long.h  Source.cpp  a.out  c.cpp  file01.result  file01.test  file02.result  file02.test  prog
2/: Long.cpp  Long.h  Source.cpp  file01.result  file01.test  file02.result  file02.test  file03.result  file03.test  oopL1Report.docx
3/: CMakeLists.txt  figure.cpp  figure.h  hexagon.cpp  hexagon.h  pentagon.cpp  pentagon.h  point.cpp  point.h  rhombus.cpp  vector.cpp
3/test/: test.result  test.test
5lab/: CMakeLists.txt  list.h  main.cpp  point.h  rhombus.h  test2.result
6lab/: CMakeLists.txt  allocator.h  list.h  main.cpp  rhombus.h  test1.result  test1.test  test2.test
7/: CMakeLists.txt  command.cpp  command.h  document.cpp  document.h  editor.cpp  editor.h  factory.cpp  factory.h  figure.h  hexagon.cpp  hexagon.h  main.cpp  pentagon.cpp  pentagon.h  point.cpp  point.h  rhombus.cpp  rhombus.h  test.result  test.test
8lab/: CMakeLists.txt  factory.cpp  factory.h  figure.h  hexagon.h  main.cpp  pentagon.h  point.h  processor.cpp  processor.h  rhombus.cpp  rhombus.h  subscriber.h
